Fix calendar overlapping

--- a/files/static/css/splash/main.css
+++ b/files/static/css/splash/main.css
@@ -72,7 +72,7 @@ nav #hovedsiden:hover {
 }
 
 article {
-  height: 420px;
+  height: 475px;
   width: 600px;
   float: right;
 }
@@ -525,4 +525,3 @@ article.cal h4 {
 .partners_bouvet {
   height: 30px;
 }
-
